experiments/wrapper/mlt_frame.nim


proc frameInit*(service: Service): Frame {.cdecl, importc: "mlt_frame_init",
                                       dynlib: mltlib.}
proc frameProperties*(self: Frame): Properties {.cdecl,
    importc: "mlt_frame_properties", dynlib: mltlib.}
proc frameIsTestCard*(self: Frame): cint {.cdecl, importc: "mlt_frame_is_test_card",
                                       dynlib: mltlib.}
proc frameIsTestAudio*(self: Frame): cint {.cdecl,
                                        importc: "mlt_frame_is_test_audio",
                                        dynlib: mltlib.}
proc frameGetAspectRatio*(self: Frame): cdouble {.cdecl,
    importc: "mlt_frame_get_aspect_ratio", dynlib: mltlib.}
proc frameSetAspectRatio*(self: Frame; value: cdouble): cint {.cdecl,
    importc: "mlt_frame_set_aspect_ratio", dynlib: mltlib.}
proc frameGetPosition*(self: Frame): Position {.cdecl,
    importc: "mlt_frame_get_position", dynlib: mltlib.}
proc frameOriginalPosition*(self: Frame): Position {.cdecl,
    importc: "mlt_frame_original_position", dynlib: mltlib.}
proc frameSetPosition*(self: Frame; value: Position): cint {.cdecl,
    importc: "mlt_frame_set_position", dynlib: mltlib.}
proc frameSetImage*(self: Frame; image: ptr uint8; size: cint; destroy: Destructor): cint {.
    cdecl, importc: "mlt_frame_set_image", dynlib: mltlib.}
proc frameSetAlpha*(self: Frame; alpha: ptr uint8; size: cint; destroy: Destructor): cint {.
    cdecl, importc: "mlt_frame_set_alpha", dynlib: mltlib.}
proc frameReplaceImage*(self: Frame; image: ptr uint8; format: ImageFormat;
                       width: cint; height: cint) {.cdecl,
    importc: "mlt_frame_replace_image", dynlib: mltlib.}
proc frameGetImage*(self: Frame; buffer: ptr ptr uint8; format: ptr ImageFormat;
                   width: ptr cint; height: ptr cint; writable: cint): cint {.cdecl,
    importc: "mlt_frame_get_image", dynlib: mltlib.}
proc frameGetAlpha*(self: Frame): ptr uint8 {.cdecl, importc: "mlt_frame_get_alpha",
    dynlib: mltlib.}
proc frameGetAudio*(self: Frame; buffer: ptr pointer; format: ptr AudioFormat;
                   frequency: ptr cint; channels: ptr cint; samples: ptr cint): cint {.
    cdecl, importc: "mlt_frame_get_audio", dynlib: mltlib.}
proc frameSetAudio*(self: Frame; buffer: pointer; a3: AudioFormat; size: cint;
                   a5: Destructor): cint {.cdecl, importc: "mlt_frame_set_audio",
                                        dynlib: mltlib.}
proc frameGetWaveform*(self: Frame; w: cint; h: cint): ptr cuchar {.cdecl,
    importc: "mlt_frame_get_waveform", dynlib: mltlib.}
proc framePushGetImage*(self: Frame; getImage: GetImage): cint {.cdecl,
    importc: "mlt_frame_push_get_image", dynlib: mltlib.}
proc framePopGetImage*(self: Frame): GetImage {.cdecl,
    importc: "mlt_frame_pop_get_image", dynlib: mltlib.}
proc framePushFrame*(self: Frame; that: Frame): cint {.cdecl,
    importc: "mlt_frame_push_frame", dynlib: mltlib.}
proc framePopFrame*(self: Frame): Frame {.cdecl, importc: "mlt_frame_pop_frame",
                                      dynlib: mltlib.}
proc framePushService*(self: Frame; that: pointer): cint {.cdecl,
    importc: "mlt_frame_push_service", dynlib: mltlib.}
proc framePopService*(self: Frame): pointer {.cdecl,
    importc: "mlt_frame_pop_service", dynlib: mltlib.}
proc framePushServiceInt*(self: Frame; that: cint): cint {.cdecl,
    importc: "mlt_frame_push_service_int", dynlib: mltlib.}
proc framePopServiceInt*(self: Frame): cint {.cdecl,
    importc: "mlt_frame_pop_service_int", dynlib: mltlib.}
proc framePushAudio*(self: Frame; that: pointer): cint {.cdecl,
    importc: "mlt_frame_push_audio", dynlib: mltlib.}
proc framePopAudio*(self: Frame): pointer {.cdecl, importc: "mlt_frame_pop_audio",
                                        dynlib: mltlib.}
proc frameServiceStack*(self: Frame): Deque {.cdecl,
    importc: "mlt_frame_service_stack", dynlib: mltlib.}
proc frameGetOriginalProducer*(self: Frame): Producer {.cdecl,
    importc: "mlt_frame_get_original_producer", dynlib: mltlib.}
proc frameClose*(self: Frame) {.cdecl, importc: "mlt_frame_close", dynlib: mltlib.}
proc frameUniqueProperties*(self: Frame; service: Service): Properties {.cdecl,
    importc: "mlt_frame_unique_properties", dynlib: mltlib.}
proc frameGetUniqueProperties*(self: Frame; service: Service): Properties {.cdecl,
    importc: "mlt_frame_get_unique_properties", dynlib: mltlib.}
proc frameClone*(self: Frame; isDeep: cint): Frame {.cdecl, importc: "mlt_frame_clone",
    dynlib: mltlib.}
##  convenience functions

proc frameWritePpm*(frame: Frame) {.cdecl, importc: "mlt_frame_write_ppm",
                                 dynlib: mltlib.}
##  /** This macro scales RGB into the YUV gamut - y is scaled by 219/255 and uv by 224/255. */
##  #define RGB2YUV_601_SCALED(r, g, b, y, u, v)\
##    y = ((263*r + 516*g + 100*b) >> 10) + 16;\
##    u = ((-152*r - 300*g + 450*b) >> 10) + 128;\
##    v = ((450*r - 377*g - 73*b) >> 10) + 128;
##  /** This macro scales RGB into the YUV gamut - uv is scaled by 224/255 (y unused). */
##  #define RGB2UV_601_SCALED(r, g, b, u, v)\
##    u = ((-152*r - 300*g + 450*b) >> 10) + 128;\
##    v = ((450*r - 377*g - 73*b) >> 10) + 128;
##
##  /** This macro scales YUV up into the full gamut of the RGB color space. */
##  #define YUV2RGB_601_SCALED( y, u, v, r, g, b ) \
##    r = ((1192 * ( y - 16 ) + 1634 * ( v - 128 ) ) >> 10 ); \
##    g = ((1192 * ( y - 16 ) - 832 * ( v - 128 ) - 401 * ( u - 128 ) ) >> 10 ); \
##    b = ((1192 * ( y - 16 ) + 2066 * ( u - 128 ) ) >> 10 ); \
##    r = r < 0 ? 0 : r > 255 ? 255 : r; \
##    g = g < 0 ? 0 : g > 255 ? 255 : g; \
##    b = b < 0 ? 0 : b > 255 ? 255 : b;
